prd/pickpro/pickpro-api/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pickpro-api
  namespace: pickpro
  labels:
    app: pickpro-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pickpro-api
  template:
    metadata:
      labels:
        app: pickpro-api
        app.kubernetes.io/part-of: soludev-workload
    spec:
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/part-of: soludev-workload
      containers:
        - name: pickpro-api
          image: kaiohz/pickpro:pickpro-back-61927328ddd7469922c5461ac8fb8ea3dc273290
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /pickpro/rest/v1/health
              port: 8000
            initialDelaySeconds: 90
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /pickpro/rest/v1/health
              port: 8000
            initialDelaySeconds: 60
            periodSeconds: 5
          resources:
            requests:
              memory: "1Gi"
              cpu: "1000m"
            limits:
              memory: "3Gi"
              cpu: "2000m"
      dnsConfig:
        options:
          - name: ndots
            value: "1"
      imagePullSecrets:
        - name: pickpro-docker-secret
